# explainshell

./: COMMUNITY_INTEGRATION.md  MANPAGES_MODERNIZATION.md  MANPAGE_SYSTEM_ARCHITECTURE.md  PR_ANALYSIS.md  README.md
explainshell/: store.py
tools/manpage-manager/: .env.example  .gitignore  Makefile  QUICKSTART.sh  README.md  TEST_RESULTS.md  demo.py  dev-prepare.sh  install.sh  pyproject.toml
tools/manpage-manager/docs/implementation/: COMPLETION_SUMMARY.md  EXECUTIVE_SUMMARY.md  SUMMARY.md
tools/manpage-manager/src/manpage_manager/: __init__.py  cli.py  config.py  dump.py  github.py  logger.py  models.py  mongodb.py
tools/manpage-manager/tests/: __init__.py  conftest.py
tools/manpage-manager/tests/e2e/: __init__.py  test_full_workflow.py
tools/manpage-manager/tests/fixtures/: __init__.py  conftest.py
tools/manpage-manager/tests/integration/: __init__.py  test_workflow.py
tools/manpage-manager/tests/unit/: __init__.py  test_cli.py  test_config.py  test_dump.py  test_models.py
tools/manpage-manager/tests/utils/: __init__.py  helpers.py
