[project]
name = "manpage-manager"
version = "0.1.0"
description = "Modern CLI tool for managing explainshell manpage database dumps"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tobias Hochguertel", email = "tobias.hochguertel@googlemail.com" },
]
dependencies = [
  "typer>=0.20.0",
  "rich>=14.2.0",
  "loguru>=0.7.3",
  "httpx>=0.28.1",
  "sh>=2.2.2",
  "pydantic>=2.12.3",
  "pydantic-settings>=2.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.2",
  #
]

[project.scripts]
manpage-mgr = "manpage_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 200
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "W",
  "UP",
  #
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
